--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,9 @@ NODE_ENV=
 PORT=
 CLIENT_URL=
 MONGO_URL=
+SENDGRID_API_KEY=
+JWT_SECRET=
+JWT_ACCOUNT_ACTIVATION=
+EMAIL_TO=
+EMAIL_FROM=
+JWT_RESET_PASSWORD
