test Activate and Toast components

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "http-proxy-middleware": "^1.0.6",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "msw": "^0.21.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -28,7 +29,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!src/index.js",
+      "!src/index.jsx",
       "!src/setupProxy.js",
       "!src/serviceWorker.js",
       "!src/test-utils/**/*.js"
